<resources>
    <string name="app_name">Knowledge Hub</string>
    <string name="assignmentapp">Knowledge Hub</string>
    <string name="welcome_to_sukhmeet_knowlegde_hub">Welcome to Sukhmeet\'s Knowledge Hub</string>
    <string name="let_s_go">Let\'s GO</string>
    <string name="select">Select</string>
    <string name="android_app_development">Android App Development</string>
    <string name="web_development">Web Development</string>
    <string name="android_dev">Android Dev</string>
    <string name="web_dev">Web Dev</string>
    <string name="ios_dev">ios Dev</string>
    <string name="ml">ML</string>
    <string name="blockchain">Blockchain</string>
    <string name="ai">AI</string>
    <string name="callus">CALL US</string>
    <string name="title_activity_blockchain_dev">blockchainDev</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ethical_hacking">Ethical Hacking</string>
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>
    <string name="firebase">Firebase</string>
    <string name="xml">XML</string>
    <string name="json">JSON</string>
    <string name="android_offical_website">Android_Official_Website</string>
    <string name="java_android_development">Java Android development</string>
    <string name="kotlin_android_development">Kotlin Android development</string>
    <string name="html">HTML</string>
    <string name="css">CSS</string>
    <string name="javascript">Javascript</string>
    <string name="reactjs">ReactJS</string>
    <string name="expressjs">ExpressJS</string>
    <string name="nodejs">NodeJS</string>
    <string name="mongodb">MongoDB</string>
    <string name="git">GIT</string>
    <string name="best_resource_to_learn">Best Resource To Learn</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="statistic">Statistic</string>
    <string name="algorithm">Algorithm</string>
    <string name="big_data">Big Data</string>
    <string name="programming_languages">Programming Languages</string>
    <string name="libraries">Libraries</string>
    <string name="devops">DevOps</string>
    <string name="dsa">DSA</string>
    <string name="cryptography">Cryptography</string>
    <string name="api">API</string>
    <string name="smart_contracts">Smart Contracts</string>
    <string name="computer_network">Computer Network</string>
    <string name="web_security">Web Security</string>
    <string name="operating_system">Operating System</string>
    <string name="certificate">Certificate</string>
    <string name="tools">TOOLS</string>
    <string name="network_and_security_concept">Network And Security Concept</string>
    <string name="macbook">Macbook</string>
    <string name="xcode">XCode</string>
    <string name="objective_c">Objective-C</string>
    <string name="third_party_libraries">Third Party Libraries</string>
    <string name="ui">UI</string>
    <string name="design_pattern">Design Pattern</string>
    <string name="network">Network</string>
    <string name="swift">Swift</string>
</resources>