<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FBF1BC"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/assignmentapp"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:textSize="52sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="#FFC107"
            android:background="#270000"
            android:id="@+id/textView"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/welcome_to_sukhmeet_knowlegde_hub"
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:textSize="60sp"
                android:textAlignment="center"
                android:textColor="#FF5722"
                android:background="#000000"
                android:layout_margin="40sp"
                android:id="@+id/textView2"/>
    </ScrollView>

    <Button
            android:text="@string/let_s_go"
            android:layout_width="match_parent"
            android:textSize="60sp"
            android:textColor="#00ff00"
            android:backgroundTint="#3F51B5"
            android:layout_gravity="center"
            android:layout_margin="20sp"
            android:layout_height="200sp"
            android:id="@+id/btnLetsGO"/>

</LinearLayout>