<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Devios">


    <TextView
            android:text="@string/ios_dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="53sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="#FFCA28"
            android:background="#DD2C00"
            android:id="@+id/textView"/>


    <!--    Ist-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffff00"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/macCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/macbook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="42sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/mactxt"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/xcodeCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/xcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/xcodetxt"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!--    second-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffff00"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/swiftCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/swift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="39sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/swifttxt"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/networkCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/networktxt"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!--    third-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffff00"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/thirdpartylibCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/third_party_libraries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="33sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/thirdpartylibtxt"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/UICard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/ui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/uitxt"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!--    fourth-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffff00"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/designpatternCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/design_pattern"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="39sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/designpatterntxt"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/gitiosCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/git"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/gitiostxt"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
            android:text="@string/best_resource_to_learn"
            android:textSize="29sp"
            android:textColor="#017E36"
            android:backgroundTint="#FF8181"
            android:layout_margin="10sp"
            android:layout_width="417dp"
            android:layout_gravity="center"
            android:layout_height="80sp"
            android:id="@+id/bestResourceiosDev"/>


</LinearLayout>