<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".Blockchain">

    <TextView
            android:text="@string/blockchain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="53sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="#FFCA28"
            android:background="#DD2C00"
            android:id="@+id/textView"/>

    <!--    Ist-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffff00"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/webDevCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/web_dev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="45sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"

                    android:id="@+id/webdevtxt"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/dsaCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/dsa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/dsatxt"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!--  second  -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffff00"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/cryptographyCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/cryptography"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/cryptotxt"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/smartcontractsCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/smart_contracts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/smartcontractstxt"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!--    third  -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffff00"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/proglangBCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/programming_languages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="27sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/proglangtxt"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/apiCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/api"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/apitxt"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <Button
            android:text="@string/best_resource_to_learn"
            android:textSize="29sp"
            android:textColor="#017E36"
            android:backgroundTint="#FF8181"
            android:layout_margin="10sp"
            android:layout_width="417dp"
            android:layout_gravity="center"
            android:layout_height="80sp"
            android:id="@+id/bestResourceBlockchain"/>


</LinearLayout>