<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#404040"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="53sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="#FFCA28"
            android:background="#DD2C00"
            android:id="@+id/textView"/>

<!--    IST-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffff00"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_height="150dp">

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/androidDevCard"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="127dp">

            <TextView
                    android:text="@string/android_dev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"

                    android:id="@+id/textView1"
                    android:textColor="#263238"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:id="@+id/ethicalHackingCard"
                android:layout_height="126dp">

            <TextView
                    android:text="@string/ethical_hacking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="40sp"
                    android:textAlignment="center"
                    android:id="@+id/ethicalhackingtext"
                    android:textColor="#263238"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>



<!--    Second-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffff00"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_height="150sp">

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/iosDevCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="121dp">

            <TextView
                    android:text="@string/ios_dev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"

                    android:id="@+id/iosText"
                    android:textColor="#263238"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:id="@+id/MLCard"
                android:layout_height="121dp">

            <TextView
                    android:text="@string/ml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="40sp"
                    android:textAlignment="center"
                    android:id="@+id/MLText"
                    android:textColor="#263238"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>



<!--    Third-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffff00"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_height="150dp">

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:id="@+id/webDevCard"
                android:layout_height="107dp">

            <TextView
                    android:text="@string/web_dev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="40sp"
                    android:textAlignment="center"
                    android:id="@+id/textView2"
                    android:textColor="#263238"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/blockchainDevCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="106dp">

            <TextView
                    android:text="@string/blockchain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"

                    android:id="@+id/blockchainDevText"
                    android:textColor="#263238"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
            android:text="@string/callus"
            android:textSize="15sp"
            android:textColor="#B71C1C"
            android:backgroundTint="#00ff00"
            android:layout_margin="25sp"
            android:layout_width="120dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/callusbtn"/>


</LinearLayout>