<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AndroidDev">

    <TextView
            android:text="@string/android_dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="53sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="#FFC107"
            android:background="#DD2C00"
            android:id="@+id/textView"/>

    <!--    IST-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffff00"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/javaCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/java"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"

                    android:id="@+id/javatxt"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/kotlinCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/kotlin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"

                    android:id="@+id/kotlintxt"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>



    <!--    Second-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffff00"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/firebaseCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/firebase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/firebasetxt"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/XMLCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/xml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/XMLtxt"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>



    <!--    Third-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#ffff00"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/jsonCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="@string/json"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/jsontxt"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:backgroundTint="#ff0000"
                android:id="@+id/gitCard"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_margin="10sp"
                android:layout_height="100dp">

            <TextView
                    android:text="GIT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/gittxt"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
            android:text="@string/java_android_development"
            android:textSize="30sp"
            android:textColor="#017E36"
            android:backgroundTint="#FF8181"
            android:layout_margin="20sp"
            android:layout_width="417dp"
            android:layout_gravity="center"
            android:layout_height="80sp"
            android:id="@+id/javaAndroidWebsitebtn"/>
    <Button
            android:text="@string/kotlin_android_development"
            android:textSize="29sp"
            android:textColor="#017E36"
            android:backgroundTint="#FF8181"
            android:layout_width="417dp"
            android:layout_gravity="center"
            android:layout_height="80sp"
            android:id="@+id/kotlinAndroidWebsitebtn"/>


</LinearLayout>